Added axios for data fetching and implemented async function to fetch all data needed

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@nivo/line": "^0.52.1",
     "@nivo/pie": "^0.52.1",
     "@nivo/radar": "^0.52.1",
+    "axios": "^0.18.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -31,5 +32,4 @@
   "devDependencies": {
     "node-sass": "^4.11.0"
   }
-
 }
